--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "stom",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://nonfermata.github.io/stommm01/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -12,16 +13,20 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.1",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "5.0.1",
     "react-toastify": "^8.1.0",
+    "redux": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "deploy": "gh-pages -d build",
+    "predeploy": "npm run build"
   },
   "eslintConfig": {
     "extends": [
