--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-intersection-observer": "^9.4.1",
     "react-redux": "^8.0.5",
     "react-router-dom": "^5.3.0",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-scroll": "^1.8.9",
     "react-toastify": "^8.1.0",
