--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "МеДДента",
-  "name": "Стоматология, косметология, медицинские анализы",
+  "name": "Стоматология, косметология, медицинские анализы в Клину",
   "icons": [
     {
       "src": "favicon.ico",
